--- a/_config.yml
+++ b/_config.yml
@@ -287,6 +287,8 @@ defaults:
       layout: single
       author_profile: true
       read_time: true
-      comments: # true
+      comments: fasle # true
       share: true
       related: true
+      show_date: true
+      date_format: "%b %-d, %Y"
