--- a/_config.yml
+++ b/_config.yml
@@ -287,7 +287,7 @@ defaults:
       layout: single
       author_profile: true
       read_time: true
-      comments: fasle # true
+      comments: false # true
       share: true
       related: true
       show_date: true
